tests/bad/compiler_op_new_pointer.oc
/// fail: Cannot use `@new` on a pointer type

struct Foo {
    a: i32
}

def main() {
    let f: Foo
    let g = @new &f
}